--- a/config/config.yml
+++ b/config/config.yml
@@ -1,9 +1,9 @@
 project_name: 'hw-02'
-experiment_name: 'recommender'
-n_epochs: 100
+experiment_name: 'recommender-track'
+n_epochs: 200
 accelerator: 'gpu'
 device: 0
-monitor_metric: 'val_rmse'
+monitor_metric: 'val_mae'
 monitor_mode: 'min'
 
 model_kwargs:
@@ -13,39 +13,39 @@ model_kwargs:
 
 optimizer: 'torch.optim.AdamW'
 optimizer_kwargs:
-  lr: 3e-4
+  lr: 3e-3
   weight_decay: 1e-5
 
-#scheduler: 'torch.optim.lr_scheduler.ReduceLROnPlateau'
-#scheduler_kwargs:
-#  patience: 10
-#  verbose: True
-
-scheduler: 'torch.optim.lr_scheduler.CosineAnnealingLR'
+scheduler: 'torch.optim.lr_scheduler.ReduceLROnPlateau'
 scheduler_kwargs:
-  T_max: 10
-  eta_min: 1e-5
+  patience: 20000
+  verbose: True
+
+#scheduler: 'torch.optim.lr_scheduler.CosineAnnealingLR'
+#scheduler_kwargs:
+#  T_max: 10
+#  eta_min: 1e-5
 
 losses:
-#  - name: 'CrossEntropyLoss'
-#    weight: 0.1
-#    loss_fn: 'torch.nn.CrossEntropyLoss'
-#    loss_kwargs: {}
-
   - name: 'MSE'
-    weight: 1.0
+    weight: 0.5
     loss_fn: 'torch.nn.MSELoss'
     loss_kwargs: {}
 
-#  - name: 'L1Loss'
-#    weight: 0.5
-#    loss_fn: 'torch.nn.L1Loss'
-#    loss_kwargs: {}
+  - name: 'L1Loss'
+    weight: 0.5
+    loss_fn: 'torch.nn.L1Loss'
+    loss_kwargs: {}
+
+#  - name: 'KL'
+#    weight: 0.01
+#    loss_fn: 'torch.nn.KLDivLoss'
+#    loss_kwargs: {'reduction': 'sum'}
+
 
 data_config:
   data_path: 'data'
   need_prepare: False
-  batch_size: 128
-  max_len: 32
-  n_workers: 4
-  train_size: 0.9
+  train_size: 0.99
+  batch_size: 65536
+  n_workers: 8
