--- a/config/config.yml
+++ b/config/config.yml
@@ -45,7 +45,7 @@ losses:
 
 data_config:
   data_path: 'data'
-  need_prepare: False
+  need_prepare: True
   train_size: 0.99
   batch_size: 65536
   n_workers: 8
